# pf-tensor

./: .gitignore  LICENSE  README.md
c/: CMakeLists.txt  CMakeLists_template.txt  README.md  test.c
c/includes/: nargs.h
c/includes/definition/: device_definition.h  type_definition.h
c/includes/tensor/: tensor.h
c/includes/tensor/kernel/: pf_body.h
c/includes/tensor/kernel/t32f/: t32f.h
c/includes/tensor/kernel/t32f/architecture/: t32f_generic.h
c/includes/tensor/kernel/t32i/: t32i.h
c/includes/tensor/kernel/t32i/architecture/: t32i_generic.h
c/includes/tensor/linalg/: pf_linalg.h
c/includes/utils/: pf_print.h  pf_utils.h
c/src/: main.c
c/src/tensor/: tensor.c
c/src/tensor/kernel/t32f/: t32f.c
c/src/tensor/kernel/t32f/architecture/: t32f_generic.c
c/src/tensor/kernel/t32i/: t32.i
c/src/tensor/kernel/t32i/architecture/: t32i_generic.c
c/src/utils/: pf_print.c
cpp/: shape.h  tensor copy.h
